# cara-sdk

./: .gitignore  .gitmodules  BASELINE_COMMIT  Cargo.toml  GEMINI.md  README.md
cara-cabi/: Cargo.toml
cara-core/: Cargo.toml
cara-core/benches/: pc_benchmarks.rs
cara-core/src/: cdm.rs  collision_consequence.rs  lib.rs
cara-core/src/probability_of_collision/: circle.rs  elrod.rs  foster.rs  hall.rs  max_pc.rs  mod.rs  sdmc.rs  utils.rs
cara-core/src/utils/: augmented_math.rs  constants.rs  mod.rs  orbit_transformations.rs  time_transformations.rs
cara-java/: Cargo.toml
cara-py/: Cargo.toml  README.md  pyproject.toml
cara-py/cara_py/: __init__.py  cara_py.pyi
cara-py/src/: lib.rs
cara-wasm/: Cargo.toml
docs/: PYTHON_USER_GUIDE.md
scripts/: profile_foster.py  test_cara.py  test_cdm.py
