[workspace]
resolver = "2"
members = [
    "cara-core",
    "cara-cabi",
    "cara-py",
    "cara-java",
    "cara-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CARA Rust Port Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nasa/cara-sdk"
description = "Rust port of CARA Analysis Tools"
