[workspace]
resolver = "2"
members = [
    "cara-core",
    "cara-cabi",
    "cara-py",
    "cara-java",
    "cara-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CARA Rust Port Team"]
license = "NASA-1.3"
repository = "https://github.com/alexander-minchin/cara-sdk"
description = "Rust port of CARA Analysis Tools"
