[package]
name = "cara-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
ndarray = { version = "0.15", features = ["approx-0_5"] }
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
libm = "0.2"

[dev-dependencies]
approx = "0.5"
